--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "graphql-tools": "^8.2.0",
     "knex": "^0.95.15",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "nodemon": "^2.0.15",
     "objection": "^3.0.0",
     "pg": "^8.7.1",
